--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -77,8 +77,6 @@
               />
             </svg>
 
-            <input type="checkbox" class="heart-clip" />
-
             <div class="fill">
               <svg
                 class="heart-fill"
@@ -117,29 +115,19 @@
         <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTREES</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-1"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-1" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Tartare de poulpe acidulé</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Aux zestes d'orange</p>
                 <span class="menu-item__price">25€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-2"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-2" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Velouté de légumes d'antan</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -147,24 +135,19 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-3"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-3" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Soupe à l'oignon</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Revisitée</p>
                 <span class="menu-item__price">20€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -174,12 +157,7 @@
         <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-4"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-4" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Coquilles Saint-Jacques</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -187,18 +165,13 @@
                 </p>
                 <span class="menu-item__price">40€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-5"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-5" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Magret de canard</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -206,18 +179,13 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-6"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-6" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Pigeonneau d'Ille-et-Vilaine</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -225,7 +193,7 @@
                 </p>
                 <span class="menu-item__price">44€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -235,52 +203,37 @@
         <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-7"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-7" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Pétales de violettes glacés</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Et purée de noisettes</p>
                 <span class="menu-item__price">18€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-8"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-8" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Fondant au chocolat</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Revisité</p>
                 <span class="menu-item__price">22€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-9"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-9" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Millefeuille croustillant</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Myrtilles et pâte d'amande</p>
                 <span class="menu-item__price">23€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
