--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -77,8 +77,6 @@
               />
             </svg>
 
-            <input type="checkbox" class="heart-clip" />
-
             <div class="fill">
               <svg
                 class="heart-fill"
@@ -117,12 +115,7 @@
         <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTRÉES</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-1"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-1" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Ravioles de foie gras</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -130,18 +123,13 @@
                 </p>
                 <span class="menu-item__price">25€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-2"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-2" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Caviar osciètre</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -149,18 +137,13 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-3"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-3" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Homard et espuma de potiron</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -168,18 +151,13 @@
                 </p>
                 <span class="menu-item__price">20€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-4"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-4" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Foie gras de canard cuit entier</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -187,7 +165,7 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -197,12 +175,7 @@
         <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-5"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-5" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Noix de coquilles Saint-Jacques</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -210,35 +183,25 @@
                 </p>
                 <span class="menu-item__price">40€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-6"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-6" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Langoustine poêlée</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Purée de patate douce</p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-7"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-7" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Mijoté de queue de bœuf</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -246,7 +209,7 @@
                 </p>
                 <span class="menu-item__price">45€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -256,12 +219,7 @@
         <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-8"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-8" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Macaron noisette et chocolat</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -269,41 +227,31 @@
                 </p>
                 <span class="menu-item__price">18€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-9"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-9" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Baba au rhum revisité</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Avec son coulis de citron</p>
                 <span class="menu-item__price">22€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-10"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-10" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Tarte au citron meringuée</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Déstructurée</p>
                 <span class="menu-item__price">23€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
