--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -77,8 +77,6 @@
               />
             </svg>
 
-            <input type="checkbox" class="heart-clip" />
-
             <div class="fill">
               <svg
                 class="heart-fill"
@@ -117,29 +115,19 @@
         <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTRÉES</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-1"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-1" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Fricassée d'escargots</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Au piment d'Espelette</p>
                 <span class="menu-item__price">25€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-2"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-2" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Foie gras de canard mi-cuit</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -147,18 +135,13 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-3"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-3" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Œuf au plat</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -166,7 +149,7 @@
                 </p>
                 <span class="menu-item__price">20€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -176,12 +159,7 @@
         <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-4"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-4" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Filet de bœuf aux herbes</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -189,18 +167,13 @@
                 </p>
                 <span class="menu-item__price">40€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-5"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-5" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Parmentier de queue de bœuf</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -208,24 +181,19 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-6"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-6" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Filet de turbot</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Aux agrumes</p>
                 <span class="menu-item__price">44€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -235,29 +203,19 @@
         <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-7"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-7" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Paris-Brest</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Revisité</p>
                 <span class="menu-item__price">18€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-8"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-8" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Macaron au chocolat d'exception</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -265,18 +223,13 @@
                 </p>
                 <span class="menu-item__price">22€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-9"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-9" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Mousse au chocolat</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -284,7 +237,7 @@
                 </p>
                 <span class="menu-item__price">23€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
