--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -77,8 +77,6 @@
               />
             </svg>
 
-            <input type="checkbox" class="heart-clip" />
-
             <div class="fill">
               <svg
                 class="heart-fill"
@@ -117,29 +115,19 @@
         <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTRÉES</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-1"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-1" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Tartare de thon</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Assaisonné au yuzu</p>
                 <span class="menu-item__price">25€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-2"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-2" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Bouchée de homard croustillant</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">
@@ -147,18 +135,13 @@
                 </p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-3"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-3" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">
                 Poulet rôti aux herbes de Provence
               </h3>
@@ -166,7 +149,7 @@
                 <p class="menu-item__description">Et sa crème de truffe</p>
                 <span class="menu-item__price">40€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -176,12 +159,7 @@
         <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-4"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-4" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">
                 Poulet rôti aux herbes de Provence
               </h3>
@@ -189,41 +167,31 @@
                 <p class="menu-item__description">Et sa crème de truffe</p>
                 <span class="menu-item__price">40€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-5"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-5" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Langouste rôtie</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Et ses légumes de saison</p>
                 <span class="menu-item__price">35€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-6"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-6" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Côte de bœuf Angus</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Et sa purée de panais</p>
                 <span class="menu-item__price">44€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
@@ -233,52 +201,37 @@
         <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-7"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-7" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Farandole de desserts</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Du chef</p>
                 <span class="menu-item__price">18€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-8"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-8" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Crème brulée</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">Revisitée</p>
                 <span class="menu-item__price">22€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
           </div>
           <div class="menu-item">
-            <input
-              type="checkbox"
-              id="menu-item-9"
-              class="menu-item__checkbox"
-            />
-            <label for="menu-item-9" class="menu-item__content">
+            <div class="menu-item__content">
               <h3 class="menu-item__title">Tiramisu</h3>
               <div class="menu-item__description-price">
                 <p class="menu-item__description">À la noisette</p>
                 <span class="menu-item__price">23€</span>
               </div>
-            </label>
+            </div>
             <div class="menu-item__check">
               <img src="../images/icons/check.svg" alt="Sélectionner" />
             </div>
